--- a/README.Rmd
+++ b/README.Rmd
@@ -40,6 +40,9 @@ RUV2 [@gagnon2012using], RUV4 [@gagnon2013removing], and LEAPP
 [@leek2007capturing, @leek2008general], then I'll include that as
 well.
 
+The calibration for RUV2 and LEAPP don't work very well right now. But
+the calibration for RUV4 seems to work really well.
+
 Check out [NEWS.md](NEWS.md) to see what's new with each version.
 
 ## Installation
