--- a/vicar.bib
+++ b/vicar.bib
@@ -486,3 +486,32 @@
   value={99},
   pages={96-104}
 }
+
+
+@Manual{wang2015cate,
+    title = {{cate}: High Dimensional Factor Analysis and Confounder Adjusted Testing
+and Estimation},
+    author = {Jingshu Wang and Qingyuan Zhao},
+    year = {2015},
+    note = {R package version 1.0.4},
+    url = {https://CRAN.R-project.org/package=cate},
+  }
+
+
+@Manual{bartsch2015ruv,
+    title = {{ruv}: Detect and Remove Unwanted Variation using Negative Controls},
+    author = {Johann Gagnon-Bartsch},
+    year = {2015},
+    note = {R package version 0.9.6},
+    url = {https://CRAN.R-project.org/package=ruv},
+  }
+
+
+
+@Manual{gerard2016vicar,
+    title = {{vicar}: Variance Inflation for Confounder Adjustment in Regression},
+    author = {David Gerard},
+    year = {2016},
+    note = {R package version 0.1.2},
+    url = {https://github.com/dcgerard/vicar},
+  }
