updated version of package, return estimates of confounders in mouthwash, updated readme and news, updated documentation.

--- a/vicar.bib
+++ b/vicar.bib
@@ -456,13 +456,16 @@
   publisher={Taylor \& Francis}
 }
 
-@article{stephens2016false,
-  title={False Discovery Rates: A New Deal.},
-  author={Stephens, Matthew},
-  journal={bioRxiv},
-  pages={038216},
-  year={2016},
-  publisher={Cold Spring Harbor Labs Journals}
+
+@article {stephens2016false,
+	author = {Stephens, Matthew},
+	title = {False Discovery Rates: A New Deal.},
+	year = {2016},
+	doi = {10.1101/038216},
+	publisher = {Cold Spring Harbor Labs Journals},
+	URL = {http://biorxiv.org/content/early/2016/06/08/038216},
+	eprint = {http://biorxiv.org/content/early/2016/06/08/038216.full.pdf},
+	journal = {bioRxiv}
 }
 
 @article{efron2008microarrays,
