another minor README change

--- a/README.Rmd
+++ b/README.Rmd
@@ -56,7 +56,7 @@ confounder adjustment with control genes by
 
 Please cite this package as:
 
-> Gerard, David. 2016. *vicar: Methods for Confounder Adjustment in Regression*. [https://github.com/dcgerard/vicar](https://github.com/dcgerard/vicar).
+> Gerard, David. 2016. *vicar: Various Ideas for Confounder Adjustment in Regression*. [https://github.com/dcgerard/vicar](https://github.com/dcgerard/vicar).
 
 Or, using BibTex:
 ``` tex
