updated references for readme

--- a/vicar.bib
+++ b/vicar.bib
@@ -1,7 +1,28 @@
-%% Adjust the Mean
+
+@article {rocke2015excess,
+	author = {Rocke, David M and Ruan, Luyao and Zhang, Yilun and Gossett, J. Jared and Durbin-Johnson, Blythe and Aviran, Sharon},
+	title = {Excess False Positive Rates in Methods for Differential Gene Expression Analysis using {RNA}-Seq Data},
+	year = {2015},
+	doi = {10.1101/020784},
+	publisher = {Cold Spring Harbor Labs Journals},
+	eprint = {http://www.biorxiv.org/content/early/2015/06/11/020784.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{lonsdale2013genotype,
+  title={The genotype-tissue expression ({GTEx}) project},
+  author={Lonsdale, John and Thomas, Jeffrey and Salvatore, Mike and Phillips, Rebecca and Lo, Edmund and Shad, Saboor and Hasz, Richard and Walters, Gary and Garcia, Fernando and Young, Nancy and others},
+  journal={Nature genetics},
+  volume={45},
+  number={6},
+  pages={580--585},
+  year={2013},
+  doi={10.1038/ng.2653},
+  publisher={Nature Publishing Group}
+}
 
 @incollection{ghosh1994some,
-  title={On some Bayesian solutions of the Neyman-Scott problem},
+  title={On some {B}ayesian solutions of the {N}eyman-{S}cott problem},
   author={Ghosh, Malay},
   booktitle={Statistical Decision Theory and Related Topics V},
   pages={267--276},
@@ -30,7 +51,7 @@
 }
 
 @article{chen2008extended,
-  title={Extended Bayesian information criteria for model selection with large model spaces},
+  title={Extended {B}ayesian information criteria for model selection with large model spaces},
   author={Chen, Jiahua and Chen, Zehua},
   journal={Biometrika},
   volume={95},
@@ -41,12 +62,24 @@
 }
 
 @article{chen2016normalization,
-  title={Normalization of Single Cell RNA Sequencing Data Using both Control and Target Genes},
+  title={Normalization of Single Cell {RNA} Sequencing Data Using both Control and Target Genes},
   author={Chen, Mengjie and Zhou, Xiang},
   journal={bioRxiv},
   pages={045070},
   year={2016},
   publisher={Cold Spring Harbor Labs Journals}
+}
+
+
+@incollection{lucas2006sparse,
+  author      = {Lucas, Joe and Carvalho, Carlos and Wang, Quanli and Bild, Andrea and Nevins, JR and West, Mike},
+  title       = {Sparse statistical modelling in gene expression genomics},
+  editor      = {Do, Kim-Anh and M{\"u}ller, Peter and Vannucci, Marina},
+  booktitle   = {Bayesian inference for gene expression and proteomics},
+  publisher   = {Cambridge University Press},
+  year        = {2006},
+  pages       = {155--176},
+  url         = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.64.3761}
 }
 
 @article{gagnon2012using,
@@ -57,42 +90,80 @@
   number={3},
   pages={539--552},
   year={2012},
+  doi={10.1093/biostatistics/kxr034},
   publisher={Biometrika Trust}
 }
 
 @techreport{gagnon2013removing,
-  title={Removing unwanted variation from high dimensional data with negative controls},
-  author={Gagnon-Bartsch, J and Jacob, L and Speed, TP},
+  title={Removing Unwanted Variation from High Dimensional Data with Negative Controls},
+  author={Gagnon-Bartsch, Johann and Jacob, Laurent and Speed, Terence},
   year={2013},
-  institution={Technical Report 820, Department of Statistics, University of California, Berkeley}
+  institution={Technical Report 820, Department of Statistics, University of California, Berkeley},
+  url={http://statistics.berkeley.edu/tech-reports/820}
 }
 
 @article{leek2007capturing,
   title={Capturing heterogeneity in gene expression studies by surrogate variable analysis},
   author={Leek, Jeffrey T and Storey, John D},
-  journal={PLoS Genet},
+  journal={PLoS Genetics},
   volume={3},
   number={9},
   pages={1724--1735},
+  doi={10.1371/journal.pgen.0030161},
   year={2007}
 }
 
+@article{storey2003positive,
+author = "Storey, John D.",
+doi = "10.1214/aos/1074290335",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "12",
+number = "6",
+pages = "2013--2035",
+publisher = "The Institute of Mathematical Statistics",
+title = "The positive false discovery rate: a {B}ayesian interpretation and the $q$-value",
+volume = "31",
+year = "2003"
+}
+
 @article{sun2012multiple,
-  title={Multiple hypothesis testing adjusted for latent variables, with an application to the Agemap gene expression data},
-  author={Sun, Yunting and Zhang, Nancy R and Owen, Art B and others},
-  journal={The Annals of Applied Statistics},
-  volume={6},
-  number={4},
-  pages={1664--1688},
-  year={2012},
-  publisher={Institute of Mathematical Statistics}
+author = "Sun, Yunting and Zhang, Nancy R. and Owen, Art B.",
+doi = "10.1214/12-AOAS561",
+fjournal = "The Annals of Applied Statistics",
+journal = "Ann. Appl. Stat.",
+month = "12",
+number = "4",
+pages = "1664--1688",
+publisher = "The Institute of Mathematical Statistics",
+title = "Multiple hypothesis testing adjusted for latent
+ variables, with an application to the {AGEMAP} gene expression
+ data",
+volume = "6",
+year = "2012"
+}
+
+@article{owen2009bi,
+author = "Owen, Art B. and Perry, Patrick O.",
+doi = "10.1214/08-AOAS227",
+fjournal = "The Annals of Applied Statistics",
+journal = "Ann. Appl. Stat.",
+month = "06",
+number = "2",
+pages = "564--594",
+publisher = "The Institute of Mathematical Statistics",
+title = "Bi-cross-validation of the {SVD} and the
+ nonnegative matrix factorization",
+volume = "3",
+year = "2009"
 }
 
 @article{wang2015confounder,
-  title={Confounder Adjustment in Multiple Hypotheses Testing},
+  title={Confounder Adjustment in Multiple Hypothesis Testing},
   author={Wang, Jingshu and Zhao, Qingyuan and Hastie, Trevor and Owen, Art B},
   journal={arXiv preprint arXiv:1508.04178},
-  year={2015}
+  year={2015},
+  url={https://arxiv.org/abs/1508.04178}
 }
 
 @article{leek2008general,
@@ -103,6 +174,7 @@
   number={48},
   pages={18718--18723},
   year={2008},
+  doi={10.1073/pnas.0808709105},
   publisher={National Acad Sciences}
 }
 
@@ -114,6 +186,7 @@
   number={8},
   pages={904--909},
   year={2006},
+  doi={10.1038/ng1847},
   publisher={Nature Publishing Group}
 }
 
@@ -169,7 +242,7 @@
 }
 
 @article{stegle2010bayesian,
-  title={A Bayesian framework to account for complex non-genetic factors in gene expression levels greatly increases power in eQTL studies},
+  title={A {B}ayesian framework to account for complex non-genetic factors in gene expression levels greatly increases power in eQTL studies},
   author={Stegle, Oliver and Parts, Leopold and Durbin, Richard and Winn, John},
   journal={PLoS Comput Biol},
   volume={6},
@@ -233,6 +306,18 @@
   publisher={Wiley Online Library}
 }
 
+@article{allen2010transposable,
+  title={Transposable regularized covariance models with an application to missing data imputation},
+  author={Allen, Genevera I and Tibshirani, Robert},
+  journal={The Annals of Applied Statistics},
+  volume={4},
+  number={2},
+  pages={764--790},
+  year={2010},
+  doi={10.1214/09-AOAS314},
+  publisher={NIH Public Access}
+}
+
 @article{lazar2012batch,
   title={Batch effect removal methods for microarray gene expression data integration: a survey},
   author={Lazar, Cosmin and Meganck, Stijn and Taminau, Jonatan and Steenhoff, David and Coletta, Alain and Molter, Colin and Weiss-Sol{\'\i}s, David Y and Duque, Robin and Bersini, Hugues and Now{\'e}, Ann},
@@ -264,7 +349,7 @@
 
 @article{yu2006unified,
   title={A unified mixed-model method for association mapping that accounts for multiple levels of relatedness},
-  author={Yu, Jianming and Pressoir, Gael and Briggs, William H and Bi, Irie Vroh and Yamasaki, Masanori and Doebley, John F and McMullen, Michael D and Gaut, Brandon S and Nielsen, Dahlia M and Holland, James B and others},
+  author={Yu, Jianming and Pressoir, Gael and Briggs, William H and Bi, Irie Vroh and Yamasaki, Masanori and Doebley, John F and McMullen, Michael D and Gaut, Brandon S and Nielsen, Dahlia M and Holland, James B},
   journal={Nature genetics},
   volume={38},
   number={2},
@@ -314,7 +399,7 @@
 
 @article{kang2010variance,
   title={Variance component model to account for sample structure in genome-wide association studies},
-  author={Kang, Hyun Min and Sul, Jae Hoon and Service, Susan K and Zaitlen, Noah A and Kong, Sit-yee and Freimer, Nelson B and Sabatti, Chiara and Eskin, Eleazar and others},
+  author={Kang, Hyun Min and Sul, Jae Hoon and Service, Susan K and Zaitlen, Noah A and Kong, Sit-yee and Freimer, Nelson B and Sabatti, Chiara and Eskin, Eleazar},
   journal={Nature genetics},
   volume={42},
   number={4},
@@ -355,7 +440,7 @@
 }
 
 @article{mostafavi2013normalizing,
-  title={Normalizing RNA-sequencing data by modeling hidden covariates with prior knowledge},
+  title={Normalizing {RNA}-sequencing data by modeling hidden covariates with prior knowledge},
   author={Mostafavi, Sara and Battle, Alexis and Zhu, Xiaowei and Urban, Alexander E and Levinson, Douglas and Montgomery, Stephen B and Koller, Daphne},
   journal={PLoS One},
   volume={8},
@@ -375,16 +460,20 @@
   publisher={Taylor \& Francis}
 }
 
-%% not trying same thing, but cited
-@article{bai2012statistical,
-  title={Statistical analysis of factor models of high dimension},
-  author={Bai, Jushan and Li, Kunpeng and others},
-  journal={The Annals of Statistics},
-  volume={40},
-  number={1},
-  pages={436--465},
-  year={2012},
-  publisher={Institute of Mathematical Statistics}
+@article {bai2012statistical,
+    AUTHOR = {Bai, Jushan and Li, Kunpeng},
+     TITLE = {Statistical analysis of factor models of high dimension},
+   JOURNAL = {Ann. Statist.},
+  FJOURNAL = {The Annals of Statistics},
+    VOLUME = {40},
+      YEAR = {2012},
+    NUMBER = {1},
+     PAGES = {436--465},
+      ISSN = {0090-5364},
+   MRCLASS = {62H25 (62F12)},
+  MRNUMBER = {3014313},
+MRREVIEWER = {Xin Yuan Song},
+       DOI = {10.1214/11-AOS966},
 }
 
 @article{cook2010envelope,
@@ -395,6 +484,16 @@
   number={3},
   pages={927--960},
   year={2010}
+}
+
+@article{smyth2004linear,
+  title={Linear models and empirical {B}ayes methods for assessing differential expression in microarray experiments},
+  author={Smyth, G. K.},
+  journal={Statistical Applications in Genetics and Molecular Biology},
+  volume={3},
+  number={1},
+  year={2004},
+  doi={10.2202/1544-6115.1027}
 }
 
 
@@ -437,7 +536,7 @@
 }
 
 @article{liang2008mixtures,
-  title={Mixtures of g priors for Bayesian variable selection},
+  title={Mixtures of g priors for {B}ayesian variable selection},
   author={Liang, Feng and Paulo, Rui and Molina, German and Clyde, Merlise A and Berger, Jim O},
   journal={Journal of the American Statistical Association},
   volume={103},
@@ -453,29 +552,28 @@
   number={4},
   pages={509--540},
   year={1992},
+  doi={10.1207/s15327906mbr2704\_2},
   publisher={Taylor \& Francis}
 }
 
-
-@article {stephens2016false,
-	author = {Stephens, Matthew},
-	title = {False Discovery Rates: A New Deal.},
-	year = {2016},
-	doi = {10.1101/038216},
-	publisher = {Cold Spring Harbor Labs Journals},
-	URL = {http://biorxiv.org/content/early/2016/06/08/038216},
-	eprint = {http://biorxiv.org/content/early/2016/06/08/038216.full.pdf},
-	journal = {bioRxiv}
+@article{stephens2016false,
+author = {Stephens, Matthew},
+title = {False discovery rates: a new deal},
+year = {2016},
+doi = {10.1093/biostatistics/kxw041},
+eprint = {http://biostatistics.oxfordjournals.org/content/early/2016/10/17/biostatistics.kxw041.full.pdf+html},
+journal = {Biostatistics}
 }
 
 @article{efron2008microarrays,
-  title={Microarrays, empirical Bayes and the two-groups model},
-  author={Efron, Bradley and others},
+  title={Microarrays, empirical {B}ayes and the two-groups model},
+  author={Efron, Bradley},
   journal={Statistical science},
   volume={23},
   number={1},
   pages={1--22},
   year={2008},
+  doi={10.1214/07-STS236},
   publisher={Institute of Mathematical Statistics}
 }
 
@@ -487,34 +585,491 @@
   publisher={Taylor \& Francis},
   doi={10.1198/016214504000000089},
   value={99},
-  pages={96-104}
+  pages={96--104}
+}
+
+@article{eisenberg2013human,
+  title={Human housekeeping genes, revisited},
+  author={Eisenberg, Eli and Levanon, Erez Y},
+  journal={Trends in Genetics},
+  volume={29},
+  number={10},
+  pages={569--574},
+  year={2013},
+  doi={10.1016/j.tig.2013.05.010},
+  publisher={Elsevier}
+}
+
+@article{benjamini1995controlling,
+  title={Controlling the false discovery rate: a practical and powerful approach to multiple testing},
+  author={Benjamini, Yoav and Hochberg, Yosef},
+  journal={Journal of the royal statistical society. Series B (Methodological)},
+  pages={289--300},
+  year={1995},
+  publisher={JSTOR}
+}
+
+@article{lange1989robust,
+  title={Robust statistical modeling using the t distribution},
+  author={Lange, Kenneth L and Little, Roderick JA and Taylor, Jeremy MG},
+  journal={Journal of the American Statistical Association},
+  volume={84},
+  number={408},
+  pages={881--896},
+  year={1989},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{devlin2001genomic,
+  title={Genomic control, a new approach to genetic-based association studies},
+  author={Devlin, B and Roeder, Kathryn and Wasserman, Larry},
+  journal={Theoretical population biology},
+  volume={60},
+  number={3},
+  pages={155--166},
+  year={2001},
+  publisher={Elsevier}
 }
 
 
+@article{yang2011genomic,
+  title={Genomic inflation factors under polygenic inheritance},
+  author={Yang, Jian and Weedon, Michael N and Purcell, Shaun and Lettre, Guillaume and Estrada, Karol and Willer, Cristen J and Smith, Albert V and Ingelsson, Erik and O'Connell, Jeffrey R and Mangino, Massimo},
+  journal={European Journal of Human Genetics},
+  volume={19},
+  number={7},
+  pages={807--812},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{devlin2004genomic,
+  title={Genomic control to the extreme},
+  author={Devlin, B and Bacanu, Silviu-Alin and Roeder, Kathryn},
+  journal={Nature genetics},
+  volume={36},
+  number={11},
+  pages={1129--1130},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
+
+@article{van2016controlling,
+  title={Controlling bias and inflation in epigenome-and transcriptome-wide association studies using the empirical null distribution},
+  author={van Iterson, Maarten M and van Zwet, Erik W and Slagboom, P Eline and Heijmans, Bastiaan T and Bios Consortium},
+  journal={bioRxiv},
+  pages={055772},
+  year={2016},
+  publisher={Cold Spring Harbor Labs Journals}
+}
+
+@Manual{rcoreteam,
+  title        = {R: A Language and Environment for Statistical
+                  Computing},
+  author       = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address      = {Vienna, Austria},
+  year         = 2016,
+  url          = {https://www.R-project.org}
+}
+
+@article{josse2016adaptive,
+  title={Adaptive shrinkage of singular values},
+  author={Josse, Julie and Sardy, Sylvain},
+  journal={Statistics and Computing},
+  volume={26},
+  number={3},
+  pages={715--724},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{candes2010matrix,
+  title={Matrix completion with noise},
+  author={Candes, Emmanuel J and Plan, Yaniv},
+  journal={Proceedings of the IEEE},
+  volume={98},
+  number={6},
+  pages={925--936},
+  year={2010},
+  doi={10.1109/JPROC.2009.2035722},
+  publisher={IEEE}
+}
+
+@article{josse2016denoiser,
+  title={{denoiseR}: {A} Package for Low Rank Matrix Estimation},
+  author={Josse, Julie and Sardy, Sylvain and Wager, Stefan},
+  journal={arXiv preprint arXiv:1602.01206},
+  year={2016},
+  url={https://arxiv.org/abs/1602.01206}
+}
+
+
+@article{hoff2007model,
+    AUTHOR = {Hoff, Peter D.},
+     TITLE = {Model averaging and dimension selection for the singular value
+              decomposition},
+   JOURNAL = {J. Amer. Statist. Assoc.},
+  FJOURNAL = {Journal of the American Statistical Association},
+    VOLUME = {102},
+      YEAR = {2007},
+    NUMBER = {478},
+     PAGES = {674--685},
+      ISSN = {0162-1459},
+     CODEN = {JSTNAL},
+   MRCLASS = {62H05 (62H25)},
+  MRNUMBER = {2325118},
+       DOI = {10.1198/016214506000001310},
+}
+
+@article{hoff2013bayesian,
+  title={Bayesian analysis of matrix data with rstiefel},
+  author={Hoff, Peter D},
+  journal={arXiv preprint arXiv:1304.3673},
+  year={2013}
+}
+
 @Manual{wang2015cate,
-    title = {{cate}: High Dimensional Factor Analysis and Confounder Adjusted Testing
+    title = {{cate}: {H}igh Dimensional Factor Analysis and Confounder Adjusted Testing
 and Estimation},
     author = {Jingshu Wang and Qingyuan Zhao},
     year = {2015},
     note = {R package version 1.0.4},
     url = {https://CRAN.R-project.org/package=cate},
-  }
-
+}
 
 @Manual{bartsch2015ruv,
-    title = {{ruv}: Detect and Remove Unwanted Variation using Negative Controls},
+    title = {{ruv}: {D}etect and Remove Unwanted Variation using Negative Controls},
     author = {Johann Gagnon-Bartsch},
     year = {2015},
     note = {R package version 0.9.6},
     url = {https://CRAN.R-project.org/package=ruv},
+}
+
+@article{stekhoven2012missforest,
+  title={{MissForest}---non-parametric missing value imputation for mixed-type data},
+  author={Stekhoven, Daniel J and B{\"u}hlmann, Peter},
+  journal={Bioinformatics},
+  volume={28},
+  number={1},
+  pages={112--118},
+  year={2012},
+  doi={10.1093/bioinformatics/btr597},
+  publisher={Oxford University Press}
+}
+
+@Manual{stekhoven2013missforest,
+    title = {{missForest}:  Nonparametric Missing Value Imputation using Random Forest},
+    author = {Daniel J. Stekhoven},
+    year = {2013},
+    note = {R package version 1.4},
+    url = {https://CRAN.R-project.org/package=missForest},
   }
 
+@book{van2012flexible,
+    author = {{van} Buuren, Stef},
+    isbn = {1439868247},
+    publisher = {Chapman and Hall/CRC},
+    title = {{Flexible Imputation of Missing Data}},
+    year = {2012}
+}
+
+@article{rubin1982algorithms,
+  title={{EM} algorithms for {ML} factor analysis},
+  author={Rubin, Donald B and Thayer, Dorothy T},
+  journal={Psychometrika},
+  volume={47},
+  number={1},
+  pages={69--76},
+  year={1982},
+  publisher={Springer}
+}
+
+@book{chikuse2012statistics,
+  title={Statistics on special manifolds},
+  author={Chikuse, Yasuko},
+  volume={174},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{hoff2012simulation,
+  title={Simulation of the matrix Bingham--von Mises--Fisher distribution, with applications to multivariate and relational data},
+  author={Hoff, Peter D},
+  journal={Journal of Computational and Graphical Statistics},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
 
 
-@Manual{gerard2016vicar,
-    title = {{vicar}: Variance Inflation for Confounder Adjustment in Regression},
-    author = {David Gerard},
+@article{gilad2015reanalysis,
+  title={A reanalysis of mouse ENCODE comparative gene expression data},
+  author={Gilad, Yoav and Mizrahi-Man, Orna},
+  journal={F1000Research},
+  volume={4},
+  year={2015},
+  publisher={Faculty of 1000 Ltd},
+  doi={10.12688/f1000research.6536.1}
+}
+
+@article{benjamini2001control,
+author = "Benjamini, Yoav and Yekutieli, Daniel",
+doi = "10.1214/aos/1013699998",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "08",
+number = "4",
+pages = "1165--1188",
+publisher = "The Institute of Mathematical Statistics",
+title = "The control of the false discovery rate in multiple testing
+			 under dependency",
+volume = "29",
+year = "2001"
+}
+
+@article{johnson2007adjusting,
+  title={Adjusting batch effects in microarray expression data using empirical {B}ayes methods},
+  author={Johnson, W Evan and Li, Cheng and Rabinovic, Ariel},
+  journal={Biostatistics},
+  volume={8},
+  number={1},
+  pages={118--127},
+  year={2007},
+  doi={10.1093/biostatistics/kxj037},
+  publisher={Biometrika Trust}
+}
+
+@article{ghosh2009default,
+  title={Default prior distributions and efficient posterior computation in {B}ayesian factor analysis},
+  author={Ghosh, Joyee and Dunson, David B},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={18},
+  number={2},
+  pages={306--320},
+  year={2009},
+  doi={10.1198/jcgs.2009.07145},
+  publisher={Taylor \& Francis}
+}
+
+@article{gelman2006prior,
+author = "Gelman, Andrew",
+doi = "10.1214/06-BA117A",
+fjournal = "Bayesian Analysis",
+journal = "Bayesian Anal.",
+month = "09",
+number = "3",
+pages = "515--534",
+publisher = "International Society for {B}ayesian Analysis",
+title = "Prior distributions for variance parameters in hierarchical models (comment on
+ article by {B}rowne and {D}raper)",
+volume = "1",
+year = "2006"
+}
+
+@article{leung2016order,
+  title={Order-invariant prior specification in {B}ayesian factor analysis},
+  author={Leung, Dennis and Drton, Mathias},
+  journal={Statistics \& Probability Letters},
+  volume={111},
+  pages={60--66},
+  year={2016},
+  doi={10.1016/j.spl.2016.01.006},
+  publisher={Elsevier}
+}
+
+@article{jiang2011synthetic,
+  title={Synthetic spike-in standards for {RNA}-seq experiments},
+  author={Jiang, Lichun and Schlesinger, Felix and Davis, Carrie A and Zhang, Yu and Li, Renhua and Salit, Marc and Gingeras, Thomas R and Oliver, Brian},
+  journal={Genome research},
+  volume={21},
+  number={9},
+  pages={1543--1551},
+  year={2011},
+  doi={10.1101/gr.121095.111},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@misc{srivastava1979introduction,
+    AUTHOR = {Srivastava, Muni Shanker and Khatri, C. G.},
+     TITLE = {An introduction to multivariate statistics},
+ PUBLISHER = {North-Holland, New York-Oxford},
+      YEAR = {1979},
+     PAGES = {xvi+350},
+      ISBN = {0-444-00302-9},
+   MRCLASS = {62-01 (62Hxx)},
+  MRNUMBER = {544670 (81j:62001)},
+MRREVIEWER = {Somesh Das Gupta},
+}
+
+@article{dawid1981some,
+    AUTHOR = {Dawid, A. P.},
+     TITLE = {Some matrix-variate distribution theory: notational
+              considerations and a {B}ayesian application},
+   JOURNAL = {Biometrika},
+  FJOURNAL = {Biometrika},
+    VOLUME = {68},
+      YEAR = {1981},
+    NUMBER = {1},
+     PAGES = {265--274},
+      ISSN = {0006-3444},
+     CODEN = {BIOKAX},
+   MRCLASS = {62H05 (62H12)},
+  MRNUMBER = {614963 (83m:62083)},
+       DOI = {10.1093/biomet/68.1.265},
+}
+
+@article{owen2016bi,
+author = "Owen, Art B. and Wang, Jingshu",
+doi = "10.1214/15-STS539",
+fjournal = "Statistical Science",
+journal = "Statist. Sci.",
+month = "02",
+number = "1",
+pages = "119--139",
+publisher = "The Institute of Mathematical Statistics",
+title = "Bi-Cross-Validation for Factor Analysis",
+volume = "31",
+year = "2016"
+}
+
+@Manual{leek2016sva,
+    title = {{sva}: Surrogate Variable Analysis},
+    author = {Jeffrey T. Leek and W. Evan Johnson and Hilary S. Parker and Elana J. Fertig and Andrew E. Jaffe and John D. Storey},
     year = {2016},
-    note = {R package version 0.1.2},
-    url = {https://github.com/dcgerard/vicar},
+    note = {R package version 3.20.0},
+    url={https://www.bioconductor.org/packages/release/bioc/html/sva.html}
   }
+
+
+@article{irizarry2005multiple,
+  title={Multiple-laboratory comparison of microarray platforms},
+  author={Irizarry, Rafael A and Warren, Daniel and Spencer, Forrest and Kim, Irene F and Biswal, Shyam and Frank, Bryan C and Gabrielson, Edward and Garcia, Joe G N and Geoghegan, Joel and Germino, Gregory and Griffin, Constance and Hilmer, Sara C and Hoffman, Eric and Jedlicka, Anne E and Kawasaki, Ernest and Martínez-Murillo, Francisco and Morsberger, Laura and Lee, Hannah and Petersen, David and Quackenbush, John and Scott, Alan and Wilson, Michael and Yang, Yanqin and Ye, Shui Qing and Yu, Wayne},
+  journal={Nature methods},
+  volume={2},
+  number={5},
+  pages={345--350},
+  year={2005},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nmeth756}
+}
+
+@article{leek2010tackling,
+  title={Tackling the widespread and critical impact of batch effects in high-throughput data},
+  author={Leek, Jeffrey T and Scharpf, Robert B and Bravo, H{\'e}ctor Corrada and Simcha, David and Langmead, Benjamin and Johnson, W Evan and Geman, Donald and Baggerly, Keith and Irizarry, Rafael A},
+  journal={Nature Reviews Genetics},
+  volume={11},
+  number={10},
+  pages={733--739},
+  year={2010},
+  doi={10.1038/nrg2825},
+  publisher={Nature Publishing Group}
+}
+
+@article{gibson2008environmental,
+  title={The environmental contribution to gene expression profiles},
+  author={Gibson, Greg},
+  journal={Nature Reviews Genetics},
+  volume={9},
+  number={8},
+  pages={575--581},
+  year={2008},
+  doi={10.1038/nrg2383},
+  publisher={Nature Publishing Group}
+}
+
+@article{akey2007design,
+  title={On the design and analysis of gene expression studies in human populations.},
+  author={Akey, Joshua M and Biswas, Shameek and Leek, Jeffrey T and Storey, John D},
+  journal={Nature genetics},
+  volume={39},
+  number={7},
+  pages={807--809},
+  year={2007},
+  doi={10.1038/ng0707-807},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{langmead2010cloud,
+  title={Cloud-scale {RNA}-sequencing differential expression analysis with Myrna},
+  author={Langmead, Ben and Hansen, Kasper D and Leek, Jeffrey T},
+  journal={Genome biology},
+  volume={11},
+  number={R83},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/gb-2010-11-8-r83}
+}
+
+
+@article{dillies2013comprehensive,
+  title={A comprehensive evaluation of normalization methods for {I}llumina high-throughput {RNA} sequencing data analysis},
+  author={Dillies, Marie-Agn{\`e}s and Rau, Andrea and Aubert, Julie and Hennequet-Antier, Christelle and Jeanmougin, Marine and Servant, Nicolas and Keime, C{\'e}line and Marot, Guillemette and Castel, David and Estelle, Jordi and others},
+  journal={Briefings in bioinformatics},
+  volume={14},
+  number={6},
+  pages={671--683},
+  year={2013},
+  publisher={Oxford Univ Press},
+  doi={10.1093/bib/bbs046}
+}
+
+@article{bullard2010evaluation,
+  title={Evaluation of statistical methods for normalization and differential expression in m{RNA}-Seq experiments},
+  author={Bullard, James H and Purdom, Elizabeth and Hansen, Kasper D and Dudoit, Sandrine},
+  journal={BMC bioinformatics},
+  volume={11},
+  number={1},
+  pages={1},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/1471-2105-11-94}
+}
+
+@article{anders2010differential,
+  title={Differential expression analysis for sequence count data},
+  author={Anders, Simon and Huber, Wolfgang},
+  journal={Genome biology},
+  volume={11},
+  number={10},
+  pages={1},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/gb-2010-11-10-r106}
+}
+
+@article{robinson2010scaling,
+  title={A scaling normalization method for differential expression analysis of {RNA}-seq data},
+  author={Robinson, Mark D and Oshlack, Alicia},
+  journal={Genome biology},
+  volume={11},
+  number={3},
+  pages={1},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/gb-2010-11-3-r25}
+}
+
+@article{mortazavi2008mapping,
+  title={Mapping and quantifying mammalian transcriptomes by {RNA}-Seq},
+  author={Mortazavi, Ali and Williams, Brian A and McCue, Kenneth and Schaeffer, Lorian and Wold, Barbara},
+  journal={Nature methods},
+  volume={5},
+  number={7},
+  pages={621--628},
+  year={2008},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nmeth.1226}
+}
+
+@article{efron2010correlated,
+  title={Correlated $z$-values and the accuracy of large-scale statistical estimates},
+  author={Efron, Bradley},
+  journal={Journal of the American Statistical Association},
+  volume={105},
+  number={491},
+  pages={1042--1055},
+  year={2010},
+  publisher={Taylor \& Francis},
+  doi = {10.1198/jasa.2010.tm09129}
+}
