--- a/README.Rmd
+++ b/README.Rmd
@@ -65,7 +65,7 @@ Or, using BibTex:
     title = {{vicar}: Various Ideas for Confounder Adjustment in Regression},
     author = {David Gerard},
     year = {2016},
-    note = {R package version 0.1.5},
+    note = {R package version 0.1.6},
     url = {https://github.com/dcgerard/vicar},
 }
 ```
@@ -87,11 +87,16 @@ devtools::install_github("dcgerard/vicar")
 ```
 
 ## Vignettes
-I've provided two vignettes to help you get started with vicar. By default, the vignettes are not built when you use `install_github`. To build the vignettes during installation, run
+I've provided three vignettes to help you get started with vicar. By default, the vignettes are not built when you use `install_github`. To build the vignettes during installation, run
 ```{r, eval = FALSE}
 install.packages("devtools")
 devtools::install_github("dcgerard/vicar", build_vignettes = TRUE)
 ```
-Note that this will result in a quite-slow install. The first vignette, _sample\_analysis_, gives a sample analysis using vicar to account for hidden confounding. The second vignette, _customFA_, gives a few instructions on how to incorporate user-defined factor analyses with the confounder adjustment procedures implemented in vicar.
+Note that this will result in a somewhat slower install. The first vignette, _sample\_analysis_, gives a sample analysis using vicar to account for hidden confounding. The second vignette, _customFA_, gives a few instructions on how to incorporate user-defined factor analyses with the confounder adjustment procedures implemented in vicar. The third vignette, _custom\_prior_, gives instructions and examples on incorporating a user-specified prior into `ruvb`. To see these vignettes after install, run
+```{r, eval = FALSE}
+utils::vignette("sample_analysis", package = "vicar")
+utils::vignette("customFA", package = "vicar")
+utils::vignette("custom_prior", package = "vicar")
+```
 
 ## References
